# cldr_collation

./: .gitignore  CHANGELOG.md  CLAUDE.md  COLLATION_OPTIONS.md  LICENSE.md  README.md  copy_uca_data  mix.exs
.github/workflows/: ci.yml
bench/: sort_benchmark.exs
c_src/: Makefile  env.mk  ucol.c
cldr_collation/: .gitignore  README.md  mix.exs
cldr_collation/config/: config.exs
cldr_collation/lib/: cldr_collation.ex
cldr_collation/test/: cldr_collation_test.exs
data/: NOTES.md
lib/: cldr_collation.ex  collation.ex
lib/cased/: insensitive.ex  sensitive.ex
lib/cldr/: collation.ex
lib/cldr/collation/: application.ex  element.ex  fast_latin.ex  han.ex  implicit_weights.ex  insensitive.ex  nif.ex  normalizer.ex  numeric.ex  options.ex  reorder.ex  sensitive.ex  sort_key.ex  table.ex  tailoring.ex  variable.ex
lib/cldr/collation/table/: parser.ex
lib/cldr/collation/tailoring/: locale_defaults.ex
lib/cldr_collation/: nif.ex
lib/collation/: application.ex  element.ex  han.ex  implicit_weights.ex  normalizer.ex  numeric.ex  options.ex  reorder.ex  sort_key.ex  table.ex  tailoring.ex  variable.ex
lib/collation/table/: parser.ex
lib/collation/tailoring/: locale_defaults.ex
lib/parser/: fractional_parser.ex
native/ex_cldr_collation/: Cargo.toml
native/ex_cldr_collation/src/: collator.rs  collator_opts.rs  lib.rs  resource.rs
test/: cldr_collation_test.exs  collation_test.exs  conformance_test.exs  doc_test.exs  han_test.exs  language_tag_test.exs  locale_specific_test.exs  nif_test.exs  options_test.exs  reorder_test.exs  tailoring_test.exs
