[package]
name = "ex_cldr_collation"
version = "0.1.0"
edition = "2021"

[lib]
name = "ex_cldr_collation"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
icu_collator = "1.2.0"
icu_locid = "1.2.0"
icu_provider = { version = "1.2.0", features = ["sync"] }
icu_testdata = "1.2.0"
rustler = "0.28.0"
